--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Depends: R (>= 2.10.0)
 Author: Damian W. Betebenner <dbetebenner@nciea.org>
 Maintainer: Damian W. Betebenner <dbetebenner@nciea.org>
 Description: Function for Function for converting cardinal to ordinal numbers for use with multiple languages.
+URL: https://github.com/CenterForAssessment/toOrdinal
 BugReports: https://github.com/CenterForAssessment/toOrdinal/issues
 LazyLoad: Yes
 ByteCompile: TRUE
