--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,8 @@ Version: 0.0-1
 Date: 2015-3-4
 Title: Function for converting cardinal to ordinal numbers for use with multiple languages
 Depends: R (>= 2.10.0) 
+Suggests: 
+    testthat
 Author: Damian W. Betebenner <dbetebenner@nciea.org>
 Maintainer: Damian W. Betebenner <dbetebenner@nciea.org>
 Description: Function for Function for converting cardinal to ordinal numbers for use with multiple languages.
