--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: toOrdinal
 Version: 0.0-1
-Date: 2015-3-4
-Title: Function for converting cardinal to ordinal numbers for use with multiple languages
+Date: 2015-3-10
+Title: Function for converting cardinal to ordinal numbers by adding a language specific ordinal indicator to the number
 Depends: R (>= 2.10.0) 
 Author: Damian W. Betebenner <dbetebenner@nciea.org>
 Maintainer: Damian W. Betebenner <dbetebenner@nciea.org>
-Description: Function for Function for converting cardinal to ordinal numbers for use with multiple languages.
+Description: Function for Function for converting cardinal to ordinal numbers by adding a language specific ordinal indicator to the number. Function utilizes indicators as described in http://en.wikipedia.org/wiki/Ordinal_indicator
 URL: https://github.com/CenterForAssessment/toOrdinal
 BugReports: https://github.com/CenterForAssessment/toOrdinal/issues
 LazyLoad: Yes
