--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: toOrdinal
 Version: 0.0-1
-Date: 2015-3-10
-Title: Function for converting cardinal to ordinal numbers by adding a language specific ordinal indicator to the number
+Date: 2015-3-11
+Title: Function for converting cardinal to ordinal numbers that adds a language specific ordinal indicator to the number
 Depends: R (>= 2.10.0) 
 Author: Damian W. Betebenner <dbetebenner@nciea.org>
 Maintainer: Damian W. Betebenner <dbetebenner@nciea.org>
-Description: Function for Function for converting cardinal to ordinal numbers by adding a language specific ordinal indicator to the number. Function utilizes indicators as described in http://en.wikipedia.org/wiki/Ordinal_indicator
+Description: Function for converting cardinal to ordinal numbers by adding a language specific ordinal indicator (http://en.wikipedia.org/wiki/Ordinal_indicator) to the number. 
 URL: https://github.com/CenterForAssessment/toOrdinal
 BugReports: https://github.com/CenterForAssessment/toOrdinal/issues
 LazyLoad: Yes
