--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: toOrdinal
+Type: Package
+Title: Function for Converting Cardinal to Ordinal Numbers by Adding a Language Specific Ordinal Indicator to the Number
+Description: Function for converting cardinal to ordinal numbers by adding a language specific ordinal indicator (http://en.wikipedia.org/wiki/Ordinal_indicator) to the number. 
 Version: 0.0-2
 Date: 2015-3-13
-Title: Function for Converting Cardinal to Ordinal Numbers by Adding a Language Specific Ordinal Indicator to the Number
+Authors@R: c(person(given=c("Damian", "W."), family="Betebenner", email="dbetebenner@nciea.org", role=c("aut", "cre")),
+                person(given="Andrew", family="Martin", role="ctb"))
+Maintainer: Damian W. Betebenner <dbetebenner@nciea.org>
 Depends: R (>= 2.10.0) 
 Suggests: testthat
-Author: Damian W. Betebenner <dbetebenner@nciea.org>
-Maintainer: Damian W. Betebenner <dbetebenner@nciea.org>
-Description: Function for converting cardinal to ordinal numbers by adding a language specific ordinal indicator (http://en.wikipedia.org/wiki/Ordinal_indicator) to the number. 
 URL: https://github.com/CenterForAssessment/toOrdinal
 BugReports: https://github.com/CenterForAssessment/toOrdinal/issues
 LazyLoad: Yes
