--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,7 +1,7 @@
-.git
-.gitignore
-README.md
-.travis.yml
-^.*\.Rproj$
-^\.Rproj\.user$
-LICENSE.md
+^\.travis\.yml$
+^docs$
+^_pkgdown\.yml$
+^README\.md$
+^LICENSE.md
+^appveyor\.yml$
+^vignettes/releases$
