--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,7 +6,7 @@ template:
 home:
   strip_header: true
   links:
-    - text: Other Center packages
+    - text: Other Center stuff
       href: https://centerforassessment.github.io/
 
 
