--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -15,32 +15,28 @@ navbar:
     type: default
     left:
     - text: Getting Started
-      href: articles/randomNames.html
+      href: articles/toOrdinal.html
     - text: Reference
       href: reference/index.html
     - text: News
       menu:
       - text: "Release notes"
       - text: "Version 1.0-0.0"
-        href: articles/releases/randomNames-1.0-0.html
+        href: articles/releases/toOrdinal-1.0-0.0.html
       - text: "Version 0.0-1"
-        href: articles/releases/randomNames-0.0-1.html
+        href: articles/releases/toOrdinal-0.0-1.html
       - text: "------------------"
       - text: "Change log"
         href: news/index.html
     right:
       - icon: fa-github
-        href: https://github.com/centerforassessment/randomNames
+        href: https://github.com/centerforassessment/toOrdinal
       - icon: fa-twitter
-        href: https://twitter.com/intent/tweet?url=https%3A%2F%2Fcenterforassessment.github.io%2FrandomNames%2Findex.html&via=dbetebenner&text=randomNames%3A%20Function%20for%20Generating%20Random%20Names%20and%20a%20Dataset&hashtags=rstats%2C%20randomNames
+        href: https://twitter.com/intent/tweet?url=https%3A%2F%2Fcenterforassessment.github.io%2FtoOrdinal&via=dbetebenner&text=toOrdinal%3A%20Cardinal%20to%20ordinal%20number%20conversion%20function&hashtags=toOrdinal%2C%20rstats
 
 
 reference:
-      - title: Random name generation
-        desc:  Function to generate random names.
+      - title: Convert cardinal to ordinal numbers
+        desc:  Function to converting cardinal to ordinal numbers.
         contents:
-            - randomNames
-      - title: Random name data set
-        desc: Internal data set used to create random names.
-        contents:
-            - randomNamesData
+            - toOrdinal
