--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,17 @@ Package: toOrdinal
 Type: Package
 Title: Function for Converting Cardinal to Ordinal Numbers by Adding a Language Specific Ordinal Indicator to the Number
 Description: Function for converting cardinal to ordinal numbers by adding a language specific ordinal indicator (http://en.wikipedia.org/wiki/Ordinal_indicator) to the number. 
-Version: 0.0-8
+Version: 1.0-0.0
 Date: 2017-6-20
 Authors@R: c(person(given=c("Damian", "W."), family="Betebenner", email="dbetebenner@nciea.org", role=c("aut", "cre")),
                 person(given="Andrew", family="Martin", role="ctb"),
 		person(given="Jeff", family="Erickson", role="ctb"))
 Maintainer: Damian W. Betebenner <dbetebenner@nciea.org>
 Depends: R (>= 2.10.0) 
-Suggests: testthat
-URL: https://github.com/CenterForAssessment/toOrdinal
-BugReports: https://github.com/CenterForAssessment/toOrdinal/issues
+Suggests: knitr,testthat
+URL: https://CenterForAssessment.github.io/toOrdinal, https://github.com/CenterForAssessment/toOrdinal, https://cran.r-project.org/package=toOrdinal
+BugReports: https://github.com/CenterForAssessment/toOrdinal/issues, 
+VignetteBuilder: knitr
 LazyLoad: Yes
 ByteCompile: TRUE
 License: GPL-3 
