--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -21,9 +21,9 @@ navbar:
     - text: News
       menu:
       - text: "Release notes"
-      - text: "Version 1.0-0.0"
+      - text: "toOrdinal 1.0-0.0"
         href: articles/releases/toOrdinal-1.0-0.0.html
-      - text: "Version 0.0-1"
+      - text: "toOrdinal 0.0-1"
         href: articles/releases/toOrdinal-0.0-1.html
       - text: "------------------"
       - text: "Change log"
