Adding toOrdinalDate to package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: toOrdinal
-Version: 1.0-0.0
-Date: 2017-7-18
-Title: Cardinal to Ordinal Number Conversion
+Version: 1.1-0.0
+Date: 2017-10-9
+Title: Cardinal to Ordinal Number & Date Conversion
 Description: Language specific cardinal to ordinal number conversion.
 Authors@R: c(person(given=c("Damian", "W."), family="Betebenner", email="dbetebenner@nciea.org", role=c("aut", "cre")),
                 person(given="Andrew", family="Martin", role="ctb"),
