--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: toOrdinal
 Version: 1.1-1.0
-Date: 2019-8-04
+Date: 2019-8-05
 Title: Cardinal to Ordinal Number & Date Conversion
 Description: Language specific cardinal to ordinal number conversion.
 Authors@R: c(person(given=c("Damian", "W."), family="Betebenner", email="dbetebenner@nciea.org", role=c("aut", "cre")),
                 person(given="Andrew", family="Martin", role="ctb"),
-		person(given="Jeff", family="Erickson", role="ctb"))
+		person(given="Jeff", family="Erickson", role="ctb"),
+		person(given="Richard", family="Cotton", role="ctb"))
 Maintainer: Damian W. Betebenner <dbetebenner@nciea.org>
 Depends: R (>= 3.3)
 Suggests: knitr, rmarkdown
