--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: toOrdinal
-Version: 1.3-0.0
-Date: 2022-2-18
+Version: 1.3-1.0
+Date: 2022-11-4
 Title: Cardinal to Ordinal Number & Date Conversion
 Description: Language specific cardinal to ordinal number conversion.
 Authors@R: c(person(given=c("Damian", "W."), family="Betebenner", email="dbetebenner@nciea.org", role=c("aut", "cre")),
@@ -8,8 +8,8 @@ Authors@R: c(person(given=c("Damian", "W."), family="Betebenner", email="dbetebe
 		person(given="Jeff", family="Erickson", role="ctb"))
 Maintainer: Damian W. Betebenner <dbetebenner@nciea.org>
 Depends: R (>= 3.3)
-Suggests: knitr, rmarkdown
-Imports: crayon, testthat
+Suggests: knitr, rmarkdown, testthat
+Imports: crayon
 URL: https://centerforassessment.github.io/toOrdinal/, https://github.com/centerforassessment/toOrdinal/, https://cran.r-project.org/package=toOrdinal
 BugReports: https://github.com/centerforassessment/toOrdinal/issues/
 VignetteBuilder: knitr
